[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfhvar"
version = "0.1.1"
description = "HF-HVAR / HF-SVAR estimation and IRFs with residual bootstrap"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Fulvio Corsi" },
  { name = "Luigi Longo" },
  { name = "Francesco Cordoni" }
]

keywords = ["VAR", "HVAR", "SVAR", "macro", "econometrics", "time-series"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]

[project.urls]
# If your GitHub owner/repo is different, edit these two lines.
Homepage = "https://github.com/l-longo-hfhvar/hfhvar"
Issues   = "https://github.com/l-longo-hfhvar/hfhvar/issues"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.6", "tqdm>=4.0"]

[project.scripts]
hfhvar = "hfhvar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
